<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/delivery_item_details"
            android:textSize="@dimen/page_title"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_left"
            android:padding="10dp"
            android:background="@drawable/bg_ripple_round"
            android:contentDescription="@string/button" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_qrcode"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/bg_round_rect"
        android:contentDescription="@string/qrcode"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="@dimen/page_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_amount"
                android:textSize="@dimen/page_title"
                android:textColor="@color/accent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textSize="@dimen/page_title"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/page_title"
                android:textColor="@color/accent"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="@dimen/page_title"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_amount"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/accent"/>

    </LinearLayout>

</LinearLayout>