<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="550dp"
        android:layout_height="280dp"
        android:contentDescription="@string/vector"
        android:src="@drawable/circle_gradient"
        android:layout_marginTop="-100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_left"
        app:tint="@color/white"
        android:contentDescription="@string/button"
        android:background="#00000000"
        android:foreground="?android:attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_consumer"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumer_details"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#111"
                android:drawablePadding="16dp"
                app:drawableStartCompat="@drawable/ic_user"
                app:drawableTint="#111" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_textfield_grey"
                android:autofillHints="name"
                android:hint="@string/consumer"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:labelFor="@id/et_contact"/>

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_textfield_grey"
                android:autofillHints="phone"
                android:hint="@string/phone_or_mobile"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:labelFor="@id/et_contact"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_textfield_grey"
                android:autofillHints="emailAddress"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_textfield_grey"
                android:autofillHints="postalAddress"
                android:hint="@string/current_address"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="12dp"
        android:padding="16dp"
        android:background="@drawable/bg_top_border">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="#111"
            android:background="#00000000"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/purple_500"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:elevation="20dp"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/white"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>