<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_bottom_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warehouse"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_textfield_grey">

        <Spinner
            android:id="@+id/warehouse_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/empty_warehouse_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/no_warehouses"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_textfield_grey">

        <Spinner
            android:id="@+id/product_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/empty_products_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/no_products"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/remaining_stocks_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_stocks" />

        <TextView
            android:id="@+id/tv_remaining_stocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/btn_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_minus_circle"
            android:contentDescription="@string/button"
            android:backgroundTint="#00000000"
            app:tint="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"/>

        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/bg_textfield_grey"
            android:autofillHints="none"
            android:hint="@string/quantity"
            android:textAlignment="center"
            android:text="@string/one"
            android:inputType="number"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/btn_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_plus_circle"
            android:contentDescription="@string/button"
            android:backgroundTint="#00000000"
            app:tint="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@drawable/bg_top_border">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:background="@color/zxing_transparent"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            android:backgroundTint="@color/purple_500"/>

    </LinearLayout>

</LinearLayout>