<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/bg_bottom_border"
    android:id="@+id/layout">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_user"
        app:tint="@color/purple_500"
        android:padding="10dp"
        android:contentDescription="@string/vector"
        android:background="@drawable/bg_circle"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="#333"
            android:text="@string/position" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="#333"
            android:text="@string/status" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_edit_2"
        app:tint="@color/purple_500"
        android:backgroundTint="@color/zxing_transparent"
        android:contentDescription="@string/button"
        android:foreground="?android:attr/selectableItemBackground"/>

</LinearLayout>

